--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,3 +14,8 @@ paste = "1"
 log = "0.4.29"
 bitflags = "2.11.0"
 linked_list_allocator = "0.10.5"
+
+[dependencies.tiny-skia]
+version = "0.12.0"
+default-features = false
+features = ["no-std-float"]
