--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -14,6 +14,8 @@ paste = "1"
 log = "0.4.29"
 bitflags = "2.11.0"
 linked_list_allocator = "0.10.5"
+derivative = { version = "2.2.0", features = ["use_core"] }
+libm = "0.2.16"
 
 [dependencies.tiny-skia]
 version = "0.12.0"
